# yandex-module-2

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  README.md
client/src/: client.rs  main.rs  monitor.rs  server.rs
quotes/: Cargo.toml  README.md
quotes/src/: error.rs  lib.rs  serialization.rs
server/: Cargo.toml  README.md
server/src/: generator.rs  main.rs  tcp.rs  udp.rs  variables.rs
server/src/udp/: client.rs  monitor.rs
