[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
quotes = { path = "../quotes" }
rand = { workspace = true }
crossbeam = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }